--- a/index.html
+++ b/index.html
@@ -9,86 +9,102 @@
 </head>
 
 <body>
-
     <header>
         <h1>Le septième art: Quelques réalisateurs</h1>
     </header>
-
-    <ol class="realisateurs">
-        <li>Francis Ford Coppola</li>
-        <li class="films"> Apocalypse Now
-            <ul class="acteurs">
-                <li> Martin Shean </li>
-                <li> Marlon Brando</li>
-            </ul>
+    <ul style="padding-left:0px;">
+        <li>
+            <ol class="realisateurs">
+                <li> Francis Ford Coppola
+                    <ol class="films">
+                        <li>Apocalypse Now
+                            <ul class="acteurs">
+                                <li> Martin Shean </li>
+                                <li> Marlon Brando</li>
+                            </ul>
+                        </li>
+                        <li>Le Parrain
+                            <ul class="acteurs">
+                                <li> Marlon Brandon </li>
+                                <li> Al Pacino </li>
+                                <li> Robert De Niro </li>
+                            </ul>
+                        </li>
+                    </ol>
+                </li>
+            </ol>
         </li>
-        <li class="films"> Le Parrain
-            <ul class="acteurs">
-                <li>Marlon Brando</li>
-                <li>Al Pacino</li>
-                <li>Robert De Niro</li>
-            </ul>
+        <li>
+            <ol class="realisateurs">
+                <li>James Cameron
+                    <ol class="films">
+                        <li>Titanic
+                            <ul class="acteurs">
+                                <li> Léonardo Dicaprio </li>
+                                <li> Kate Winslet</li>
+                                <li> Bill Paxton </li>
+                            </ul>
+                        </li>
+                        <li>Rambo 2
+                            <ul class="acteurs">
+                                <li> Sylvester Stallon </li>
+                                <li> Martin Kove </li>
+                            </ul>
+                        </li>
+                    </ol>
+                </li>
+            </ol>
+        <li>
+            <ol class="realisateurs">
+                <li>Steven Spielburg
+                    <ol class="films">
+                        <li>Indiana Jones et le temple Maudit
+                            <ul class="acteurs">
+                                <li> Harisson Ford </li>
+                                <li> Kate Capshaw</li>
+                                <li> David Yip </li>
+                            </ul>
+                        </li>
+                        <li>Le Terminal
+                            <ul class="acteurs">
+                                <li> Tom Hanks </li>
+                                <li> Catherine Zéta-Jones </li>
+                                <li> Sasha Spielburg </li>
+                            </ul>
+                        </li>
+                        <li>Rapport minoritaire
+                            <ul class="acteurs">
+                                <li> Tom Cruise </li>
+                                <li> Steve Harris </li>
+                                <li> Colin Farrell </li>
+                            </ul>
+                        </li>
+                    </ol>
+                </li>
+            </ol>
         </li>
-    </ol>
-    <ol class="realisateurs">
-        <li>James Cameron</li>
-        <li class="films"> Titanic
-            <ul class="acteurs">
-                <li>Leonardo DiCaprio</li>
-                <li>Kate Winslet</li>
-                <li>Bill Paxton</li>
-            </ul>
+        <li>
+            <ol class="realisateurs">
+                <li>Georges Lucas
+                    <ol class="films">
+                        <li>La Guerre des étoiles(Star Wars)
+                            <ul class="acteurs">
+                                <li> Harisson Ford </li>
+                                <li> Carrie Fisher</li>
+                            </ul>
+                        </li>
+                        <li>Indiana Jones et le temple Maudi
+                            <ul class="acteurs">
+                                <li> Harisson Ford </li>
+                                <li> Kate Capshaw</li>
+                                <li> David Yip </li>
+                            </ul>
+                        </li>
+                    </ol>
+                </li>
+            </ol>
         </li>
-        <li class="films"> Rambo2
-            <ul class="acteurs">
-                <li>Sylvester Stallon</li>
-                <li>Martin Kove</li>
-            </ul>
-        </li>
-    </ol>
-    <ol class="realisateurs">
-        <li>Steven Spielberg</li>
-        <li class="films"> Idiana Jones et le temple maudit
-            <ul class="acteurs">
-                <li>Harisson Ford</li>
-                <li>Kate Capshaw</li>
-                <li>David Yip</li>
-            </ul>
-        </li>
-        <li class="films"> Le Terminal
-            <ul class="acteurs">
-                <li>Tom Hanks</li>
-                <li>Catherine Zéta-Jones</li>
-                <li>Sasha Spielberg</li>
-            </ul>
-        </li>
-        <li class="films"> Rapport minoritaire
-            <ul class="acteurs">
-                <li>Tom Cruise</li>
-                <li>Steve Haris</li>
-                <li>ColinFarrell</li>
-            </ul>
-    </ol>
-    <ol class="realisateurs">
-        <li>Georges Lucas</li>
-        <li class="films"> La guerre des étoiles(Star Wars)
-            <ul class="acteurs">
-                <li> Harisson Ford </li>
-                <li> Carrie Fisher</li>
-            </ul>
-        </li>
-        <li class="films"> Idiana Jones et le temple maudit
-            <ul class="acteurs">
-                <li>Harisson Ford</li>
-                <li>Kate Capshaw</li>
-                <li>David Yip</li>
-            </ul>
-        </li>
-    </ol>
-
-
-
-
+    </ul>
 </body>
 
 </html>
