--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <ol class="films">
                         <li>Titanic
                             <ul class="acteurs">
-                                <li> Léonardo Dicaprio </li>
+                                <li> Leonardo DiCaprio </li>
                                 <li> Kate Winslet</li>
                                 <li> Bill Paxton </li>
                             </ul>
@@ -93,7 +93,7 @@
                                 <li> Carrie Fisher</li>
                             </ul>
                         </li>
-                        <li>Indiana Jones et le temple Maudi
+                        <li>Indiana Jones et le temple Maudit
                             <ul class="acteurs">
                                 <li> Harisson Ford </li>
                                 <li> Kate Capshaw</li>
